[tool.poetry]
name = "aimlsession"
version = "0.1.0"
description = ""
authors = ["Diwaker Ghimire <dwkrghm@pm.me>"]

[tool.poetry.dependencies]
python = "~3.9"
jupyter = "^1.0.0"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
